--- a/mermaid.dark.css
+++ b/mermaid.dark.css
@@ -3,84 +3,84 @@
 /* Sequence Diagram variables */
 /* Gantt chart variables */
 .mermaid .label {
-  color: #333;
+  color: #323D47;
 }
 .node rect,
 .node circle,
 .node ellipse,
 .node polygon {
-  fill: #ECECFF;
-  stroke: #CCCCFF;
+  fill: #BDD5EA;
+  stroke: #81B1DB;
   stroke-width: 1px;
 }
 .edgePath .path {
-  stroke: #333333;
+  stroke: lightgrey;
 }
 .edgeLabel {
   background-color: #e8e8e8;
 }
 .cluster rect {
-  fill: #ffffde !important;
+  fill: #6D6D65 !important;
   rx: 4 !important;
-  stroke: #aaaa33 !important;
+  stroke: rgba(255, 255, 255, 0.25) !important;
   stroke-width: 1px !important;
 }
 .cluster text {
-  fill: #333;
+  fill: #F9FFFE;
 }
 .actor {
-  stroke: #CCCCFF;
-  fill: #ECECFF;
+  stroke: #81B1DB;
+  fill: #BDD5EA;
 }
 text.actor {
   fill: black;
   stroke: none;
 }
 .actor-line {
-  stroke: grey;
+  stroke: lightgrey;
 }
 .messageLine0 {
   stroke-width: 1.5;
   stroke-dasharray: "2 2";
   marker-end: "url(#arrowhead)";
-  stroke: #333;
+  stroke: lightgrey;
 }
 .messageLine1 {
   stroke-width: 1.5;
   stroke-dasharray: "2 2";
-  stroke: #333;
+  stroke: lightgrey;
 }
 #arrowhead {
-  fill: #333;
+  fill: lightgrey !important;
 }
 #crosshead path {
-  fill: #333 !important;
-  stroke: #333 !important;
+  fill: lightgrey !important;
+  stroke: lightgrey !important;
 }
 .messageText {
-  fill: #333;
+  fill: lightgrey;
   stroke: none;
 }
 .labelBox {
-  stroke: #CCCCFF;
-  fill: #ECECFF;
+  stroke: #81B1DB;
+  fill: #BDD5EA;
 }
 .labelText {
-  fill: black;
+  fill: #323D47;
   stroke: none;
 }
 .loopText {
-  fill: black;
+  fill: lightgrey;
   stroke: none;
 }
 .loopLine {
   stroke-width: 2;
   stroke-dasharray: "2 2";
   marker-end: "url(#arrowhead)";
-  stroke: #CCCCFF;
+  stroke: #81B1DB;
 }
 .note {
-  stroke: #aaaa33;
+  stroke: rgba(255, 255, 255, 0.25);
   fill: #fff5ad;
 }
 .noteText {
@@ -95,10 +95,10 @@ text.actor {
   opacity: 0.2;
 }
 .section0 {
-  fill: rgba(102, 102, 255, 0.49);
+  fill: rgba(255, 255, 255, 0.3);
 }
 .section2 {
-  fill: #fff400;
+  fill: #EAE8B9;
 }
 .section1,
 .section3 {
@@ -106,16 +106,16 @@ text.actor {
   opacity: 0.2;
 }
 .sectionTitle0 {
-  fill: #333;
+  fill: #F9FFFE;
 }
 .sectionTitle1 {
-  fill: #333;
+  fill: #F9FFFE;
 }
 .sectionTitle2 {
-  fill: #333;
+  fill: #F9FFFE;
 }
 .sectionTitle3 {
-  fill: #333;
+  fill: #F9FFFE;
 }
 .sectionTitle {
   text-anchor: start;
@@ -124,9 +124,13 @@ text.actor {
 }
 /* Grid and axis */
 .grid .tick {
-  stroke: lightgrey;
+  stroke: rgba(255, 255, 255, 0.3);
   opacity: 0.3;
   shape-rendering: crispEdges;
+}
+.grid .tick text {
+  fill: lightgrey;
+  opacity: 0.5;
 }
 .grid path {
   stroke-width: 0;
@@ -134,25 +138,25 @@ text.actor {
 /* Today line */
 .today {
   fill: none;
-  stroke: red;
+  stroke: #DB5757;
   stroke-width: 2px;
 }
 /* Task styling */
 /* Default task */
 .task {
-  stroke-width: 2;
+  stroke-width: 1;
 }
 .taskText {
   text-anchor: middle;
   font-size: 11px;
 }
 .taskTextOutsideRight {
-  fill: black;
+  fill: #323D47;
   text-anchor: start;
   font-size: 11px;
 }
 .taskTextOutsideLeft {
-  fill: black;
+  fill: #323D47;
   text-anchor: end;
   font-size: 11px;
 }
@@ -161,76 +165,74 @@ text.actor {
 .taskText1,
 .taskText2,
 .taskText3 {
-  fill: white;
+  fill: #323D47;
 }
 .task0,
 .task1,
 .task2,
 .task3 {
-  fill: #8a90dd;
-  stroke: #534fbc;
+  fill: #BDD5EA;
+  stroke: rgba(255, 255, 255, 0.5);
 }
 .taskTextOutside0,
 .taskTextOutside2 {
-  fill: black;
+  fill: lightgrey;
 }
 .taskTextOutside1,
 .taskTextOutside3 {
-  fill: black;
+  fill: lightgrey;
 }
 /* Active task */
 .active0,
 .active1,
 .active2,
 .active3 {
-  fill: #bfc7ff;
-  stroke: #534fbc;
+  fill: #81B1DB;
+  stroke: rgba(255, 255, 255, 0.5);
 }
 .activeText0,
 .activeText1,
 .activeText2,
 .activeText3 {
-  fill: black !important;
+  fill: #323D47 !important;
 }
 /* Completed task */
 .done0,
 .done1,
 .done2,
 .done3 {
-  stroke: grey;
   fill: lightgrey;
-  stroke-width: 2;
 }
 .doneText0,
 .doneText1,
 .doneText2,
 .doneText3 {
-  fill: black !important;
+  fill: #323D47 !important;
 }
 /* Tasks on the critical line */
 .crit0,
 .crit1,
 .crit2,
 .crit3 {
-  stroke: #ff8888;
-  fill: red;
+  stroke: #E83737;
+  fill: #E83737;
   stroke-width: 2;
 }
 .activeCrit0,
 .activeCrit1,
 .activeCrit2,
 .activeCrit3 {
-  stroke: #ff8888;
-  fill: #bfc7ff;
+  stroke: #E83737;
+  fill: #81B1DB;
   stroke-width: 2;
 }
 .doneCrit0,
 .doneCrit1,
 .doneCrit2,
 .doneCrit3 {
-  stroke: #ff8888;
+  stroke: #E83737;
   fill: lightgrey;
-  stroke-width: 2;
+  stroke-width: 1;
   cursor: pointer;
   shape-rendering: crispEdges;
 }
@@ -238,18 +240,18 @@ text.actor {
 .doneCritText1,
 .doneCritText2,
 .doneCritText3 {
-  fill: black !important;
+  fill: lightgrey !important;
 }
 .activeCritText0,
 .activeCritText1,
 .activeCritText2,
 .activeCritText3 {
-  fill: black !important;
+  fill: #323D47 !important;
 }
 .titleText {
   text-anchor: middle;
   font-size: 18px;
-  fill: black;
+  fill: lightgrey;
 }
 /*
 
@@ -266,8 +268,8 @@ div.mermaidTooltip {
   padding: 2px;
   font-family: 'trebuchet ms', verdana, arial;
   font-size: 12px;
-  background: #ffffde;
-  border: 1px solid #aaaa33;
+  background: #6D6D65;
+  border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 2px;
   pointer-events: none;
   z-index: 100;
